# catena-ce

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  LICENSE.md  README.md  go.mod  go.sum  renovate.json  scanctl.yml
ansible/: .ansible-lint  .gitignore  README.md  ansible.cfg  catena  pyproject.toml  requirements.yml  seed.py
ansible/helpers/: age_key.py  bootstrap_dokploy_admin.py  bootstrap_output.py  extract_secrets_core.py  install_key.py  labels_schema.py  net_retry.py  public_ports.py  recovery_archive_core.py  sops_vault.py
ansible/inventory/example/: .env.example  hosts.yml.example  localhost.yml
ansible/playbooks/: backup_now.yml  bootstrap.yml  preflight.yml  regenerate-cf-tunnel.yml  restore.yml  rotate-tailscale.yml  site.yml  uninstall.yml  validate.yml
ansible/playbooks/filter_plugins/: backup_tier.py  dokploy_naming.py  env_merge.py  keyscan_alias.py  restic_repo_endpoint.py  topo_sort.py
ansible/playbooks/lookup_plugins/: dotenv.py
ansible/roles/backup/: README.md
ansible/roles/catena-admin/: README.md
ansible/roles/cloudflare_tunnel/: README.md
ansible/roles/cloudflare_tunnel_regenerate/: README.md
ansible/roles/common/: README.md
ansible/roles/coturn/: README.md
ansible/roles/docker/: README.md
ansible/roles/dokploy/: README.md
ansible/roles/host_hardening/: README.md
ansible/scripts/: acquire-lock.sh  backup-coverage.sh  beszel-hc-shim.py  beszel-seed.py  catena-admin-runner.sh  catena-keycloak-realm-export.sh  catena-public-ports.py  catena-version-check.py  clients_provisioner.py  dashboard-sync.py  disk-preflight.sh  dokploy-traefik-nudge.sh  dokploy_api.py  gate_routes.py  gatus-sync.py  generate-recovery-archive.py  healthchecks-seed.py  keycloak_client.py  mailbox_sync.py  mailserver-cert-reload.sh  nextcloud-talk-hpb-wire.sh  restic-env.sh  restic-mount.sh  restic-short-id.sh  restic-unmount.sh  restore.sh  rocketchat-jitsi-wire.sh  route_synth.py  run-backup.sh  run-clamav-watch.sh  run-mail-canary.sh  snapshot-export.sh  snapshot-list.sh  wire-nextcloud-antivirus.sh  wire-nextcloud-collabora.sh  wire-nextcloud-mail.sh  wire-nextcloud-oidc.sh  wire-nextcloud-onlyoffice.sh  wire-nextcloud-webmail-link.sh
(+262 files in other folders)
